agregue estilos al CSS y modifique algunas etiquetas del HTML

--- a/index.html
+++ b/index.html
@@ -26,21 +26,12 @@
     </figure>
     <h2 class="negrita">Upcoming Events</h2>    
     <ul>
-      <li><i>August 4</i>
-        <ul>
-          <li>MDSL Fundraiser</li>
-        </ul>
-      </li>      
-      <li><i>August 16</i>
-        <ul>
-          <li>Season Kick-off: Meet the Teams</li>
-        </ul>
-      </li>      
-      <li><i>September 1</i>
-        <ul>
-          <li>First Game of the Season (Check Game Schedule for details)</li>
-        </ul>
-      </li>      
+      <li>August 4</li>        
+      <li>MDSL Fundraiser</li>            
+      <li>August 16</li>      
+      <li>Season Kick-off: Meet the Teams</li>
+      <li>September 1</li>      
+      <li>First Game of the Season (Check Game Schedule for details)</li>                
     </ul>
 
   </main>
