agrego cambios en los archivos html y en el archivo style.css segun diseño 1

--- a/contact.html
+++ b/contact.html
@@ -4,28 +4,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style/style.css">
+  <!-- <link rel="stylesheet" href="./style/style2.css"> -->
+  <!-- <link rel="stylesheet" href="./style/style3.css"> -->
   <title>Contact MDHL</title>
 </head>
 <body>
   <header>
-    <figure>
-      <img src="./img/Logo_Mighty_ducks_01.png" alt="MDHL logo">      
-    </figure>
-    <h1>Mighty Ducks Hockey League</h1>
-  </header>
-
-  <nav>
-    <a href="./index.html">Home</a>
-    <a href="./about.html">About MDHL</a>
-    <a href="#">Contact</a>
-  </nav>
+    <div class="encabezado">      
+      <h1>Mighty Ducks Hockey League</h1>
+    </div>
+    <div>
+      <h2 class="negrita">Upcoming Events</h2> 
+      <figure>
+        <img src="./img/Logo_Mighty_ducks_01.png" alt="MDHL logo">      
+      </figure>
+    </div>
+  </header>  
 
   <main>
-    <figure>
-      <img src="./img/hockey_3.jpg" alt="MDHL hockey image 3">      
-    </figure>
-    <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-    <p>We reply to your email as soon as we can.</p>
+
+    <div>
+      <nav>
+        <a href="./index.html">Home</a>
+        <a href="./about.html">About MDHL</a>
+        <a href="#" class="sinSubrayado">Contact</a>
+      </nav>
+    </div>
+  
+    <div>
+      <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+      <p>We reply to your email as soon as we can.</p>
+    </div>
+    
   </main>
 
   <footer>
