--- a/about.html
+++ b/about.html
@@ -4,47 +4,53 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style/style.css">
+  <!-- <link rel="stylesheet" href="./style/style2.css"> -->
+  <!-- <link rel="stylesheet" href="./style/style3.css"> -->
   <title>About MDHL</title>
 </head>
 <body>
   <header>
-    <figure>
-      <img src="./img/Logo_Mighty_ducks_01.png" alt="MDHL logo">      
-    </figure>
-    <h1>Mighty Ducks Hockey League</h1>
-  </header>
-
-  <nav>
-    <a href="./index.html">Home</a>
-    <a href="#">About MDHL</a>
-    <a href="./contact.html">Contact</a>
-  </nav>
-
-  <main>
-    <figure>
-      <img src="./img/hockey_2.jpg" alt="MDHL hockey image 2">      
-    </figure>
-    <div>
-      <section>
-        <h3 class="negrita">Mision</h3>
-        <p>To support young athletes living Chicago's northside neighborhood, who have an interest in
-          learning and playing soccer, with opportunities to learn and practice skills related to the game of
-          hockey, specifically those skills around team cooperation and good sportsmanship</p>
-      </section>
-      <section>
-        <h3 class="negrita">Vision</h3>
-        <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
-          through the building of character, self-discipline, and leadership</p>
-      </section>
-      <section>
-        <h3 class="negrita">General Information</h3>
-        <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
-          Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
-          member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
-          neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
-          parents and previous league members</p>
-      </section>
+    <div class="encabezado">      
+      <h1>Mighty Ducks Hockey League</h1>
     </div>
+    <div>
+      <h2 class="negrita">Upcoming Events</h2> 
+      <figure>
+        <img src="./img/Logo_Mighty_ducks_01.png" alt="MDHL logo">      
+      </figure>
+    </div>
+  </header>
+  
+  <main>
+  <div>
+    <nav>
+      <a href="./index.html">Home</a>
+      <a href="#" class="sinSubrayado">About MDHL</a>
+      <a href="./contact.html">Contact</a>
+    </nav>
+  </div> 
+
+  <div>
+    <section>
+      <h3 class="negrita">Mision</h3>
+      <p>To support young athletes living Chicago's northside neighborhood, who have an interest in
+        learning and playing soccer, with opportunities to learn and practice skills related to the game of
+        hockey, specifically those skills around team cooperation and good sportsmanship</p>
+    </section>
+    <section>
+      <h3 class="negrita">Vision</h3>
+      <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
+        through the building of character, self-discipline, and leadership</p>
+    </section>
+    <section>
+      <h3 class="negrita">General Information</h3>
+      <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
+        Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
+        member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
+        neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
+        parents and previous league members</p>
+    </section>
+  </div>
 
   </main>
 
