--- a/index.html
+++ b/index.html
@@ -3,36 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style/style.css">  
+  <link rel="stylesheet" href="./style/style.css"> 
+  <!-- <link rel="stylesheet" href="./style/style2.css"> -->
+  <!-- <link rel="stylesheet" href="./style/style3.css"> -->
   <title>Home</title>
 </head>
 <body>
   <header>
-    <figure>
-      <img src="./img/Logo_Mighty_ducks_01.png" alt="MDHL logo">      
-    </figure>
-    <h1>Mighty Ducks Hockey League</h1>
-  </header>
-
-  <nav>
-    <a href="#">Home</a>
-    <a href="./about.html">About MDHL</a>
-    <a href="./contact.html">Contact</a>
-  </nav>
+    <div class="encabezado">      
+      <h1>Mighty Ducks Hockey League</h1>
+    </div>
+    <div>
+      <h2 class="negrita">Upcoming Events</h2> 
+      <figure>
+        <img src="./img/Logo_Mighty_ducks_01.png" alt="MDHL logo">      
+      </figure>
+    </div>
+  </header>  
 
   <main>
-    <figure>
-      <img src="./img/hockey_1.jpg" alt="MDHL hockey image 1">      
-    </figure>
-    <h2 class="negrita">Upcoming Events</h2>    
-    <ul>
-      <li>August 4</li>        
-      <li>MDSL Fundraiser</li>            
-      <li>August 16</li>      
-      <li>Season Kick-off: Meet the Teams</li>
-      <li>September 1</li>      
-      <li>First Game of the Season (Check Game Schedule for details)</li>                
-    </ul>
+    <div>
+      <nav>
+        <a href="#" class="sinSubrayado">Home</a>
+        <a href="./about.html">About MDHL</a>
+        <a href="./contact.html">Contact</a>
+      </nav>
+    </div>  
+    
+    <div>
+      <ul>
+        <li>August 4</li>        
+        <li>MDSL Fundraiser</li>            
+        <li>August 16</li>      
+        <li>Season Kick-off: Meet the Teams</li>
+        <li>September 1</li>      
+        <li>First Game of the Season (Check Game Schedule for details)</li>                
+      </ul>
+    </div>   
 
   </main>
 
