agrego el archivo style2.css segun diseño 2

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <main>
     <div>
       <nav>
-        <a href="#" class="sinSubrayado">Home</a>
+        <a href="#" class="seleccionado" >Home</a>
         <a href="./about.html">About MDHL</a>
         <a href="./contact.html">Contact</a>
       </nav>
