--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
       <h1>Mighty Ducks Hockey League</h1>
     </div>
     <div>
-      <h2 class="negrita">Upcoming Events</h2> 
+      <h2 class="negrita">About MDHL</h2> 
       <figure>
         <img src="./img/Logo_Mighty_ducks_01.png" alt="MDHL logo">      
       </figure>
@@ -25,7 +25,7 @@
   <div>
     <nav>
       <a href="./index.html">Home</a>
-      <a href="#" class="sinSubrayado">About MDHL</a>
+      <a href="#" class="seleccionado">About MDHL</a>
       <a href="./contact.html">Contact</a>
     </nav>
   </div> 
