--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
       <h1>Mighty Ducks Hockey League</h1>
     </div>
     <div>
-      <h2 class="negrita">Upcoming Events</h2> 
+      <h2 class="negrita">Contact</h2> 
       <figure>
         <img src="./img/Logo_Mighty_ducks_01.png" alt="MDHL logo">      
       </figure>
@@ -27,7 +27,7 @@
       <nav>
         <a href="./index.html">Home</a>
         <a href="./about.html">About MDHL</a>
-        <a href="#" class="sinSubrayado">Contact</a>
+        <a href="#" class="seleccionado">Contact</a>
       </nav>
     </div>
   
