--- a/contact.html
+++ b/contact.html
@@ -10,20 +10,21 @@
 </head>
 <body>
   <header>
+
     <div class="encabezado">      
       <h1>Mighty Ducks Hockey League</h1>
     </div>
-    <div>
+
+    <div id="subtitulo">
       <h2 class="negrita">Contact</h2> 
-      <figure>
-        <img src="./img/Logo_Mighty_ducks_01.png" alt="MDHL logo">      
-      </figure>
-    </div>
+      <img src="./img/Logo_Mighty_ducks_01.png" alt="MDHL logo">    
+    </div>  
+    
   </header>  
 
   <main>
 
-    <div>
+    <div id="divNav">
       <nav>
         <a href="./index.html">Home</a>
         <a href="./about.html">About MDHL</a>
@@ -31,7 +32,7 @@
       </nav>
     </div>
   
-    <div>
+    <div id="divContact">
       <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
       <p>We reply to your email as soon as we can.</p>
     </div>
