agrego cambios en el archivo style2.css de acuerdo al diseño 2

--- a/contact.html
+++ b/contact.html
@@ -3,33 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style/style.css">
-  <!-- <link rel="stylesheet" href="./style/style2.css"> -->
+  <!-- <link rel="stylesheet" href="./style/style.css"> -->
+  <link rel="stylesheet" href="./style/style2.css">
   <!-- <link rel="stylesheet" href="./style/style3.css"> -->
   <title>Contact MDHL</title>
 </head>
 <body>
   <header>
 
+    <h2 id="titulo2">Mighty Ducks Hockey League</h2> <!-- Se oculta en el diseño 1 -->
+
     <div class="encabezado">      
-      <h1>Mighty Ducks Hockey League</h1>
+      <h1 id="titulo1">Mighty Ducks Hockey League</h1>
     </div>
 
     <div id="subtitulo">
       <h2 class="negrita">Contact</h2> 
       <img src="./img/Logo_Mighty_ducks_01.png" alt="MDHL logo">    
     </div>  
+
+    <div id="divNav2"> <!-- Se oculta en el diseño 1 -->
+      <nav>
+        <a href="./index.html">Home</a>
+        <a href="./about.html">About</a>
+        <a href="#" class="seleccionado">Contact</a>
+      </nav>       
+    </div> 
     
   </header>  
 
   <main>
 
-    <div id="divNav">
+    <div id="divNav1"> 
       <nav>
         <a href="./index.html">Home</a>
         <a href="./about.html">About MDHL</a>
         <a href="#" class="seleccionado">Contact</a>
       </nav>
+    </div>
+    <div id="divLogo2"> <!-- Se oculta en el diseño 1 -->
+      <img src="./img/Logo_Mighty_ducks_01.png" alt="MDHL logo"> 
     </div>
   
     <div id="divContact">
@@ -38,10 +51,6 @@
     </div>
     
   </main>
-
-  <footer>
-
-  </footer>
 
 </body>
 </html>
