agrego cambios en archivos HTML, en hojas de estilo style.css y style2.css y subo archivo style3.css correspondiente al diseño 3

--- a/about.html
+++ b/about.html
@@ -3,15 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="./style/style.css"> -->
-  <link rel="stylesheet" href="./style/style2.css">
+  <link rel="stylesheet" href="./style/style.css">
+  <!-- <link rel="stylesheet" href="./style/style2.css"> -->
   <!-- <link rel="stylesheet" href="./style/style3.css"> -->
   <title>About MDHL</title>
 </head>
 <body>
   <header>
+    <!-- Se oculta en el diseño 1 y 2 -->
+    <img src="./img/Logo_Mighty_ducks_01.png" alt="MDHL logo" id="miniLogo">
 
-    <h2 id="titulo2">Mighty Ducks Hockey League</h2> <!-- Se oculta en el diseño 1 -->
+    <!-- Se oculta en el diseño 1 -->
+    <h2 id="titulo2">Mighty Ducks Hockey League</h2>
 
     <div class="encabezado">      
       <h1 id="titulo1">Mighty Ducks Hockey League</h1>
@@ -22,7 +25,8 @@
       <img src="./img/Logo_Mighty_ducks_01.png" alt="MDHL logo">    
     </div>  
 
-    <div id="divNav2"> <!-- Se oculta en el diseño 1 -->
+    <!-- Se oculta en el diseño 1 -->
+    <div id="divNav2">
       <nav>
         <a href="./index.html">Home</a>
         <a href="#" class="seleccionado">About</a>
@@ -40,8 +44,10 @@
         <a href="#" class="seleccionado">About MDHL</a>
         <a href="./contact.html">Contact</a>
       </nav>
-    </div> 
-    <div id="divLogo2"> <!-- Se oculta en el diseño 1 -->
+    </div>
+    
+    <!-- Se oculta en el diseño 1 -->
+    <div id="divLogo2">
       <img src="./img/Logo_Mighty_ducks_01.png" alt="MDHL logo"> 
     </div>
 
