--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="./style/style.css">  -->
-  <link rel="stylesheet" href="./style/style2.css">
+  <link rel="stylesheet" href="./style/style.css"> 
+  <!-- <link rel="stylesheet" href="./style/style2.css"> -->
   <!-- <link rel="stylesheet" href="./style/style3.css"> -->
   <title>Home</title>
 </head>
 <body>
   <header>
+    <!-- Se oculta en el diseño 1 y 2 -->
+    <img src="./img/Logo_Mighty_ducks_01.png" alt="MDHL logo" id="miniLogo">
 
-    <h2 id="titulo2">Mighty Ducks Hockey League</h2> <!-- Se oculta en el diseño 1 -->
+    <!-- Se oculta en el diseño 1 -->
+    <h2 id="titulo2">Mighty Ducks Hockey League</h2> 
 
     <div class="encabezado">      
       <h1 id="titulo1">Mighty Ducks Hockey League</h1>
@@ -20,9 +23,10 @@
     <div id="subtitulo">
       <h2 class="negrita">Upcoming Events</h2> 
       <img src="./img/Logo_Mighty_ducks_01.png" alt="MDHL logo">    
-    </div>  
+    </div>
 
-    <div id="divNav2"> <!-- Se oculta en el diseño 1 -->
+    <!-- Se oculta en el diseño 1 -->
+    <div id="divNav2">
       <nav>
         <a href="#" class="seleccionado" >Home</a>
         <a href="./about.html">About</a>
@@ -42,7 +46,8 @@
       </nav>             
     </div>
     
-    <div id="divLogo2"> <!-- Se oculta en el diseño 1 -->
+    <!-- Se oculta en el diseño 1 -->
+    <div id="divLogo2">
       <img src="./img/Logo_Mighty_ducks_01.png" alt="MDHL logo"> 
     </div> 
 
