agrego favicon a los archivos html

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style/style.css">
+  <link rel="icon" type="image/png" href="./img/sport_hockey_filled_icon_201864.png"> 
   <title>Contact MDHL</title>
 </head>
 <body>
