--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style/style.css">  
+  <link rel="stylesheet" href="./style/style.css"> 
+  <link rel="icon" type="image/png" href="./img/sport_hockey_filled_icon_201864.png"> 
   <title>Home</title>
 </head>
 <body>
