--- a/index.html
+++ b/index.html
@@ -9,45 +9,48 @@
 </head>
 <body>
   <header>
-    <figure>
-      <img src="./img/Logo_Mighty_ducks_01.png" alt="MDHL logo">      
-    </figure>
-    <h1>Mighty Ducks Hockey League</h1>
-  </header>
+    <!-- titulo -->
+    <div id="titulo">
+      <h1>Mighty Ducks Hockey League</h1>
+    </div>
 
-  <nav>
-    <a href="#">Home</a>
-    <a href="./about.html">About MDHL</a>
-    <a href="./contact.html">Contact</a>
-  </nav>
+    <!-- imagen de fondo + nav -->
+    <div class="img-encabezado">
+      <nav>
+        <a href="#" class="seleccionado" >Home</a>
+        <a href="./about.html">About</a>
+        <a href="./contact.html">Contact</a>
+      </nav>
+    </div>    
+
+    <!-- subtitulo -->
+    <div id="subtitulo">
+      <h2>Upcoming Events</h2>
+    </div>
+    
+  </header> 
 
   <main>
-    <figure>
-      <img src="./img/hockey_1.jpg" alt="MDHL hockey image 1">      
-    </figure>
-    <h2 class="negrita">Upcoming Events</h2>    
-    <ul>
-      <li><i>August 4</i>
-        <ul>
-          <li>MDSL Fundraiser</li>
-        </ul>
-      </li>      
-      <li><i>August 16</i>
-        <ul>
-          <li>Season Kick-off: Meet the Teams</li>
-        </ul>
-      </li>      
-      <li><i>September 1</i>
-        <ul>
-          <li>First Game of the Season (Check Game Schedule for details)</li>
-        </ul>
-      </li>      
-    </ul>
+
+    <!-- imagen logo movil -->
+    <img src="./img/Logo_Mighty_ducks_01.png" alt="MDHL logo">
+
+    <!-- informacion a mostrar -->
+    <div id="informacion">
+      <ul>
+        <li>August 4</li>        
+        <li>MDSL Fundraiser</li>            
+        <li>August 16</li>      
+        <li>Season Kick-off: Meet the Teams</li>
+        <li>September 1</li>      
+        <li>First Game of the Season (Check Game Schedule for details)</li>                
+      </ul>
+    </div>    
 
   </main>
 
   <footer>
-
+    <h6>2023 - Mighty Ducks Hockey League - All rights reserved</h6>
   </footer>
 
 </body>
