--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
       <nav>
         <a href="./index.html">Home</a>
         <a href="./about.html">About</a>
+        <a href="./rules.html">Rules</a>
         <a href="#" class="seleccionado">Contact</a>
       </nav>
     </div>    
@@ -37,8 +38,8 @@
     
     <!-- informacion a mostrar -->
     <div id="informacion">
-      <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-      <p>We reply to your email as soon as we can.</p>
+      <p class="separacion">Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+      <p class="separacion">We reply to your email as soon as we can.</p>
     </div>
   </main>
 
