--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <nav>
         <a href="#" class="seleccionado" >Home</a>
         <a href="./about.html">About</a>
+        <a href="./rules.html">Rules</a>
         <a href="./contact.html">Contact</a>
       </nav>
     </div>    
@@ -37,7 +38,7 @@
 
     <!-- informacion a mostrar -->
     <div id="informacion">
-      <ul>
+      <ul id="listas-index">
         <li>August 4</li>        
         <li>MDSL Fundraiser</li>            
         <li>August 16</li>      
