agrego cambios en el style.css y en los archivos html

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
   <main>
     
     <!-- imagen logo movil -->
-    <img src="./img/Logo_Mighty_ducks_01.png" alt="MDHL logo">
+    <img src="./img/Logo_Mighty_ducks_01.png" id="logo" alt="MDHL logo">
     
     <!-- informacion a mostrar -->
     <div id="informacion">
