--- a/rules.html
+++ b/rules.html
@@ -34,11 +34,11 @@
   </header> 
 
   <main>
-    <!-- imagen logo movil -->
-    <img src="./img/Logo_Mighty_ducks_01.png" alt="MDHL logo">
+    <!-- imagen logo movil -->    
+      <img src="./img/Logo_Mighty_ducks_01.png" id="logo" alt="MDHL logo">   
+    
 
     <div id="informacion">
-
       <div id="titular" class="separacion">
         <h3>Mighty Ducks Hockey League</h3>
         <h3>RULES OF PLAY & POLICIES</h3>
@@ -47,7 +47,7 @@
 
       <div class="separacion">
         <h3>SPORTSMANSHIP</h3>
-        <ul class="lista-rules1">
+        <ul class="sin-deco">
           <li class="sangria">The common interest that members of the Association share is to inspire
             youth to practice the ideals of sportsmanship and fair play. Any player, coach,
             team, parent, spectator, administrator or referee whose behavior detracts from
@@ -87,11 +87,11 @@
 
       <div class="separacion">
         <h3>ALL-PLAY</h3>
-        <ul type="none">
+        <ul class="sin-deco">
           <li class="sangria">All-play means that every recreation player on every team shall play atleast
             fifty percent of each game. Coaches in the competition program are encouraged
             to play their players 50% of each game.
-            <ul type="circle" class="corrido2">
+            <ul class="corrido2 tipo-circulo">
               <li>A Coach shall be permitted to not play a player 50% of each game
                 under special circumstances, e.g., unexcused absences from practice
                 and/or games, ungentlemanly conduct at practice and/or games, and
@@ -102,9 +102,7 @@
       </div>
       
     </div>
-  </main>
-
-  </main>
+  </main> 
 
   <footer>
     <h6>2023 - Mighty Ducks Hockey League - All rights reserved</h6>
