agrego archivo game_info.html y cambios en la hoja de estilos

--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
       <nav>
         <a href="./index.html">Home</a>
         <a href="./about.html">About</a>
+        <a href="./game_info.html">Game info</a>
         <a href="./rules.html">Rules</a>
         <a href="#" class="seleccionado">Contact</a>
       </nav>
