--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <nav>
         <a href="#" class="seleccionado" >Home</a>
         <a href="./about.html">About</a>
+        <a href="./game_info.html">Game info</a>
         <a href="./rules.html">Rules</a>
         <a href="./contact.html">Contact</a>
       </nav>
@@ -40,11 +41,11 @@
     <div id="informacion">
       <ul id="listas-index">
         <li>August 4</li>        
-        <li>MDSL Fundraiser</li>            
+        <li>MDSL Fundraiser.</li>            
         <li>August 16</li>      
-        <li>Season Kick-off: Meet the Teams</li>
+        <li>Season Kick-off: Meet the Teams.</li>
         <li>September 1</li>      
-        <li>First Game of the Season (Check Game Schedule for details)</li>                
+        <li>First Game of the Season (Check Game Schedule for details).</li>                
       </ul>
     </div>    
 
