--- a/rules.html
+++ b/rules.html
@@ -9,7 +9,6 @@
 </head>
 <body>
 
-  
   <header>
     <!-- titulo -->
     <div id="titulo">
@@ -21,6 +20,7 @@
       <nav>
         <a href="./index.html">Home</a>
         <a href="./about.html">About</a>
+        <a href="./game_info.html">Game info</a>
         <a href="#" class="seleccionado">Rules</a>
         <a href="./contact.html">Contact</a>
       </nav>
@@ -39,7 +39,7 @@
     
 
     <div id="informacion">
-      <div id="titular" class="separacion">
+      <div class= "titular separacion">
         <h3>Mighty Ducks Hockey League</h3>
         <h3>RULES OF PLAY & POLICIES</h3>
         <p>IHF rules shall govern MDHL play except as modified herein.</p>
