--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
       <nav>
         <a href="./index.html">Home</a>
         <a href="#" class="seleccionado">About</a>
+        <a href="./game_info.html">Game info</a>
         <a href="./rules.html">Rules</a>
         <a href="./contact.html">Contact</a>
       </nav>
@@ -41,22 +42,22 @@
     <div id="informacion">
       <section class="separacion">
         <h3>Mision</h3>
-        <p>To support young athletes living Chicago's northside neighborhood, who have an interest in
+        <p class="sangria">To support young athletes living Chicago's northside neighborhood, who have an interest in
           learning and playing soccer, with opportunities to learn and practice skills related to the game of
-          hockey, specifically those skills around team cooperation and good sportsmanship</p>
+          hockey, specifically those skills around team cooperation and good sportsmanship.</p>
       </section>
       <section class="separacion">
         <h3>Vision</h3>
-        <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
-          through the building of character, self-discipline, and leadership</p>
+        <p class="sangria">The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
+          through the building of character, self-discipline, and leadership.</p>
       </section>
       <section class="separacion">
         <h3>General Information</h3>
-        <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
+        <p class="sangria">The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
           Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
           member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
           neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
-          parents and previous league members</p>
+          parents and previous league members.</p>
       </section>
     </div>
 
