arreglo detalles y elimino bordes guia

--- a/index.html
+++ b/index.html
@@ -28,27 +28,28 @@
     <!-- subtitulo -->
     <div id="subtitulo">
       <h2>Upcoming Events</h2>
-    </div>
-    
-  </header> 
+    </div>    
+  </header>
 
   <main>
+    <div id="contenedor-main">
 
-    <!-- imagen logo movil -->
-    <img src="./img/Logo_Mighty_ducks_01.png" id="logo" alt="MDHL logo">
+        <!-- imagen logo movil -->
+      <img src="./img/Logo_Mighty_ducks_01.png" id="logo" alt="MDHL logo">
 
-    <!-- informacion a mostrar -->
-    <div id="informacion">
-      <ul id="listas-index">
-        <li>August 4</li>        
-        <li>MDSL Fundraiser.</li>            
-        <li>August 16</li>      
-        <li>Season Kick-off: Meet the Teams.</li>
-        <li>September 1</li>      
-        <li>First Game of the Season (Check Game Schedule for details).</li>                
-      </ul>
-    </div>    
+      <!-- informacion a mostrar -->
+      <div id="informacion">
+        <ul id="listas-index">
+          <li>August 4</li>        
+          <li>MDSL Fundraiser.</li>            
+          <li>August 16</li>      
+          <li>Season Kick-off: Meet the Teams.</li>
+          <li>September 1</li>      
+          <li>First Game of the Season (Check Game Schedule for details).</li>                
+        </ul>
+      </div> 
 
+    </div>
   </main>
 
   <footer>
