agrego cambios en registration.html, en la hoja de estilos y en los nombres de algunas clases

--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
         <a href="./about.html">About</a>
         <a href="./game_info.html">Game info</a>
         <a href="./rules.html">Rules</a>
+        <a href="./registration.html">Registration</a>
         <a href="#" class="seleccionado">Contact</a>
       </nav>
     </div>    
@@ -39,8 +40,8 @@
       
       <!-- informacion a mostrar -->
       <div id="informacion">
-        <p class="separacion">Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-        <p class="separacion">We reply to your email as soon as we can.</p>
+        <p class="espacio-inf">Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+        <p class="espacio-inf">We reply to your email as soon as we can.</p>
       </div>
 
     </div>
