--- a/game_info.html
+++ b/game_info.html
@@ -22,6 +22,7 @@
         <a href="./about.html">About</a>
         <a href="#" class="seleccionado">Game info</a>
         <a href="./rules.html">Rules</a>
+        <a href="./registration.html">Registration</a>
         <a href="./contact.html">Contact</a>
       </nav>
     </div>    
@@ -117,7 +118,7 @@
           </tr>
         </table> 
         
-        <div class="separacion">
+        <div class="espacio-inf">
           <p><b>Facility Type: </b>Outdoor</p>
           <p><b>Additional Information: </b>If deemed necessary by MDHL games may be shortened or cancelled due to extreme weather conditions.</p>
           <p><b>Please direct all questions to: </b>Michael Randall, League Coordinator.</p>
