--- a/rules.html
+++ b/rules.html
@@ -22,6 +22,7 @@
         <a href="./about.html">About</a>
         <a href="./game_info.html">Game info</a>
         <a href="#" class="seleccionado">Rules</a>
+        <a href="./registration.html">Registration</a>
         <a href="./contact.html">Contact</a>
       </nav>
     </div>    
@@ -39,13 +40,13 @@
       <img src="./img/Logo_Mighty_ducks_01.png" id="logo" alt="MDHL logo">
       
       <div id="informacion">
-        <div class= "titular separacion">
+        <div class= "titular espacio-inf">
           <h3>Mighty Ducks Hockey League</h3>
           <h3>RULES OF PLAY & POLICIES</h3>
           <p>IHF rules shall govern MDHL play except as modified herein.</p>
         </div>
 
-        <div class="separacion">
+        <div class="espacio-inf">
           <h3>SPORTSMANSHIP</h3>
           <ul class="sin-deco">
             <li class="sangria">The common interest that members of the Association share is to inspire
@@ -56,9 +57,9 @@
           </ul>
         </div>
 
-        <div class="separacion">
+        <div class="espacio-inf">
           <h3>IHF FIELD REGULATIONS</h3>
-          <div class="corrido1">
+          <div class="margen1">
             <ol type="1">
               <li><b>DIMENSIONS.</b>IHF Law 1 provides for flexible external field dimensions within
                 a given maximum and minimum width and length. These dimensions should be
@@ -72,7 +73,7 @@
                 from leagues, districts or associations that are unable to provide an acceptable
                 field may be required to play all their games away.</li>
               <li><b>FIELDS USED BY YOUNG AGE GROUPS.</b>
-                <ol type="a" class="corrido2">
+                <ol type="a" class="margen2">
                   <li>U-6 play on a field approximately 20 X 40 yards with no penalty areas. Fields
                     for older age groups should be progressively larger.</li>
                   <li>U-8 plays on a field 40-50 yards in length and 20-30 yards width.</li>
@@ -85,7 +86,7 @@
           </div>
         </div>
 
-        <div class="separacion">
+        <div class="espacio-inf">
           <h3>ALL-PLAY</h3>
           <ul class="sin-deco">
             <li class="sangria">All-play means that every recreation player on every team shall play atleast
