--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
         <a href="#" class="seleccionado">About</a>
         <a href="./game_info.html">Game info</a>
         <a href="./rules.html">Rules</a>
+        <a href="./registration.html">Registration</a>
         <a href="./contact.html">Contact</a>
       </nav>
     </div>    
@@ -42,18 +43,18 @@
       
       <!-- informacion a mostrar -->
       <div id="informacion">
-        <section class="separacion">
+        <section class="espacio-inf">
           <h3>Mision</h3>
           <p class="sangria">To support young athletes living Chicago's northside neighborhood, who have an interest in
             learning and playing soccer, with opportunities to learn and practice skills related to the game of
             hockey, specifically those skills around team cooperation and good sportsmanship.</p>
         </section>
-        <section class="separacion">
+        <section class="espacio-inf">
           <h3>Vision</h3>
           <p class="sangria">The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
             through the building of character, self-discipline, and leadership.</p>
         </section>
-        <section class="separacion">
+        <section class="espacio-inf">
           <h3>General Information</h3>
           <p class="sangria">The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
             Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
