cambie el menu hamburguesa por un png, simplifique las media queries y corregí un error del select-option

--- a/index.html
+++ b/index.html
@@ -16,13 +16,8 @@
     
     <!-- imagen de fondo + nav -->
     <div class="img-encabezado">
-      <img src="./img/Logo_Mighty_ducks_01.png" id="logo-mini" alt="MDHL logo">      
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" width="44" height="44" viewBox="0 0 24 24" stroke-width="3" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
-        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-        <path d="M4 6l16 0" />
-        <path d="M4 12l16 0" />
-        <path d="M4 18l16 0" />
-      </svg>
+      <img src="./img/Logo_Mighty_ducks_01.png" id="logo-mini" alt="MDHL logo"> 
+      <img src="./img/menu-hamb.png" id="menu-hamb" alt="MDHL logo">      
       <nav>
         <a href="#" class="seleccionado" >Home</a>
         <a href="./about.html">About</a>
